# betagun

./: .gitignore  .gitmodules
devel/: .catkin  .rosinstall  (+2 more)
src/cameras/: CMakeLists.txt  package.xml
src/cameras/cfg/: Camera.cfg  CameraStereo.cfg  CameraStereo2.cfg  Homography.cfg
src/cameras/config/: cameras.config
src/cameras/config/camera/: webcam.yaml
src/cameras/config/camera_stereo/: logitech_c120.yaml  usb_cam.yaml  usb_cam_left.yaml  usb_cam_right.yaml
src/cameras/config/camera_stereo2/: usb_cam.yaml  usb_cam_left.yaml  usb_cam_right.yaml
src/cameras/config/firewire_camera/: format7_mode0.yaml
src/cameras/config/gscam/: logitech.yaml
src/cameras/launch/: camera.launch  camera_polling.launch  camera_stereo.launch  camera_stereo2.launch  camera_stereo_backup.launch  camera_timer.launch  firewire_camera.launch  fovis_demo.launch  gscam.launch  homography.launch  openni_kinect_hw_registered.launch  openni_kinect_no_registered.launch  openni_kinect_sw_registered.launch  viso2_demo.launch
src/cameras/launch/calibration/: calibration_camera_chessboard.launch  calibration_camera_stereo_chessboard.launch  calibration_firewire_camera_acircles.launch  calibration_firewire_camera_chessboard.launch  calibration_firewire_camera_circles.launch  calibration_gscam_chessboard.launch
src/cameras/launch/frames/: stereo_frames.launch  stereo_frames2.launch
src/cameras/launch/visual_odometry/: betagun_odometer.launch  viso2_mono_odometer.launch  viso2_stereo_odometer.launch
src/cameras/src/: camera.cpp  camera_stereo.cpp  camera_stereo2.cpp  homography.cpp
(+181 files in other folders)
